second commit with more images

--- a/index.html
+++ b/index.html
@@ -91,5 +91,96 @@
             <div class="description">Crickets</div>
         </div>
 
+        <div class="gallery">
+            <a target="_blank" href="IMG/PICT0391.jpg">
+                <img src="IMG/PICT0391.jpg" alt="Framed plant in a mirror" width="300vw">
+            </a>
+            <div class="description">Framed plant in a mirror</div>
+        </div>
+
+        <div class="gallery">
+            <a target="_blank" href="IMG/PICT0432.jpg">
+                <img src="IMG/PICT0432.jpg" alt="Shadows of trees" width="300vw">
+            </a>
+            <div class="description">Shadows of trees</div>
+        </div>
+
+        <div class="gallery">
+            <a target="_blank" href="IMG/PICT0441.jpg">
+                <img src="IMG/PICT0441.jpg" alt="Food time?" width="300vw">
+            </a>
+            <div class="description">Food time?</div>
+        </div>
+
+        <div class="gallery">
+            <a target="_blank" href="IMG/PICT0469.jpg">
+                <img src="IMG/PICT0469.jpg" alt="Branches in the sky" width="300vw">
+            </a>
+            <div class="description">Branches in the sky</div>
+        </div>
+
+        <div class="gallery">
+            <a target="_blank" href="IMG/PICT0473.jpg" style="transform: rotate(90deg)">
+                <img src="IMG/PICT0473.jpg" alt="Mom in a sunny coat" width="300vw">
+            </a>
+            <div class="description">Mom in a sunny coat</div>
+        </div>
+
+        <div class="gallery">
+            <a target="_blank" href="IMG/PICT0480.jpg">
+                <img src="IMG/PICT0480.jpg" alt="Sun behind the roadsign" width="300vw">
+            </a>
+            <div class="description">Sun behind the roadsign</div>
+        </div>
+
+        <div class="gallery">
+            <a target="_blank" href="IMG/PICT0513.jpg">
+                <img src="IMG/PICT0513.jpg" alt="Early spring flowers" width="300vw">
+            </a>
+            <div class="description">Early spring flowers</div>
+        </div>
+
+        <div class="gallery">
+            <a target="_blank" href="IMG/PICT0520.jpg">
+                <img src="IMG/PICT0520.jpg" alt="Full table" width="300vw">
+            </a>
+            <div class="description">Full table</div>
+        </div>
+
+        <div class="gallery">
+            <a target="_blank" href="IMG/PICT0560.jpg">
+                <img src="IMG/PICT0560.jpg" alt="Fir trees" width="300vw">
+            </a>
+            <div class="description">Fir trees</div>
+        </div>
+
+        <div class="gallery">
+            <a target="_blank" href="IMG/PICT0569.jpg">
+                <img src="IMG/PICT0569.jpg" alt="Striped coulds" width="300vw">
+            </a>
+            <div class="description">Striped coulds</div>
+        </div>
+
+        <div class="gallery2">
+            <a target="_blank" href="IMG/PHO00981.JPG">
+                <img src="IMG/PHO00981.JPG" alt="Cat nose sleepy" width="300vw">
+            </a>
+            <div class="description">Cat nose sleepy</div>
+        </div>
+
+        <div class="gallery2">
+            <a target="_blank" href="IMG/PHO00958.JPG">
+                <img src="IMG/PHO00958.JPG" alt="Hairy leaves" width="300vw">
+            </a>
+            <div class="description">Hairy leaves</div>
+        </div>
+
+        <div class="gallery2">
+            <a target="_blank" href="IMG/PHO00841.JPG">
+                <img src="IMG/PHO00841.JPG" alt="Sky through the branches" width="300vw">
+            </a>
+            <div class="description">Sky through the branches</div>
+        </div>
+ 
     </body>
 </html>
