More photos from old camera added (plz live old camera!)

--- a/index.html
+++ b/index.html
@@ -181,6 +181,161 @@
             </a>
             <div class="description">Sky through the branches</div>
         </div>
+
+        <div class="gallery2">
+            <a target="_blank" href="IMG/PHO00808.JPG">
+                <img src="IMG/PHO00808.JPG" alt="Fir in the sun" width="300vw">
+            </a>
+            <div class="description">Fir in the sun</div>
+        </div>
  
+        <div class="gallery2">
+            <a target="_blank" href="IMG/PHO00709.JPG">
+                <img src="IMG/PHO00709.JPG" alt="Lilies of the valley in a jug" width="300vw">
+            </a>
+            <div class="description">Lilies of the valley in a jug</div>
+        </div>
+
+        <div class="gallery2">
+            <a target="_blank" href="IMG/PHO00353.JPG">
+                <img src="IMG/PHO00353.JPG" alt="Summer sky above trees" width="300vw">
+            </a>
+            <div class="description">Summer sky above trees</div>
+        </div>
+
+        <div class="gallery2">
+            <a target="_blank" href="IMG/PHO00347.JPG">
+                <img src="IMG/PHO00347.JPG" alt="Blooming apple tree" width="300vw">
+            </a>
+            <div class="description">Blooming apple tree</div>
+        </div>
+
+        <div class="gallery2">
+            <a target="_blank" href="IMG/PHO00309.JPG">
+                <img src="IMG/PHO00309.JPG" alt="Orchids in the window" width="300vw">
+            </a>
+            <div class="description">Orchids in the window</div>
+        </div>
+
+        <div class="gallery2">
+            <a target="_blank" href="IMG/PHO00294.JPG">
+                <img src="IMG/PHO00294.JPG" alt="Red maple" width="300vw">
+            </a>
+            <div class="description">Red maple</div>
+        </div>
+
+
+        <div class="gallery2">
+            <a target="_blank" href="IMG/PHO00242.JPG">
+                <img src="IMG/PHO00242.JPG" alt="Kitty" width="300vw">
+            </a>
+            <div class="description">Kitty</div>
+        </div>
+
+        <div class="gallery2">
+            <a target="_blank" href="IMG/PHO00215x.JPG">
+                <img src="IMG/PHO00215x.JPG" alt="Christmas baubles outdoors" width="300vw">
+            </a>
+            <div class="description">Christmas baubles outdoors</div>
+        </div>
+
+        <div class="gallery2">
+            <a target="_blank" href="IMG/PHO00215.JPG">
+                <img src="IMG/PHO00215.JPG" alt="Geraniums" width="300vw">
+            </a>
+            <div class="description">Geraniums</div>
+        </div>
+
+        <div class="gallery2">
+            <a target="_blank" href="IMG/PHO00213.JPG">
+                <img src="IMG/PHO00213.JPG" alt="2025" width="300vw">
+            </a>
+            <div class="description">2025</div>
+        </div>
+
+        <div class="gallery2">
+            <a target="_blank" href="IMG/PHO00177.JPG">
+                <img src="IMG/PHO00177.JPG" alt="Chinese new year lanterns" width="300vw">
+            </a>
+            <div class="description">Chinese new year lanterns</div>
+        </div>
+
+        <div class="gallery2">
+            <a target="_blank" href="IMG/PHO00175.JPG">
+                <img src="IMG/PHO00175.JPG" alt="Refractions of a succulent" width="300vw">
+            </a>
+            <div class="description">Refractions of a succulent</div>
+        </div>
+        
+        <div class="gallery2">
+            <a target="_blank" href="IMG/PHO00113.JPG">
+                <img src="IMG/PHO00113.JPG" alt="A cloud of apple flowers" width="300vw">
+            </a>
+            <div class="description">A cloud of apple flowers</div>
+        </div>
+
+        <div class="gallery2">
+            <a target="_blank" href="IMG/PHO00086.JPG">
+                <img src="IMG/PHO00086.JPG" alt="Christmas tree" width="300vw">
+            </a>
+            <div class="description">Christmas tree</div>
+        </div>
+
+        <div class="gallery2">
+            <a target="_blank" href="IMG/PHO00033.JPG">
+                <img src="IMG/PHO00033.JPG" alt="Scattered clouds" width="300vw">
+            </a>
+            <div class="description">Scattered clouds</div>
+        </div>
+
+        <div class="gallery2">
+            <a target="_blank" href="IMG/PHO00028.JPG">
+                <img src="IMG/PHO00028.JPG" alt="Sun rays" width="300vw">
+            </a>
+            <div class="description">Sun rays</div>
+        </div>
+
+        <div class="gallery2">
+            <a target="_blank" href="IMG/PHO00026.JPG">
+                <img src="IMG/PHO00026.JPG" alt="Park streetlight" width="300vw">
+            </a>
+            <div class="description">Park streetlight</div>
+        </div>
+
+        <div class="gallery2">
+            <a target="_blank" href="IMG/PHO00024.JPG">
+                <img src="IMG/PHO00024.JPG" alt="Ant queen" width="300vw">
+            </a>
+            <div class="description">Ant queen</div>
+        </div>
+
+        <div class="gallery2">
+            <a target="_blank" href="IMG/PHO00015.JPG">
+                <img src="IMG/PHO00015.JPG" alt="Clover" width="300vw">
+            </a>
+            <div class="description">Clover</div>
+        </div>
+
+        <div class="gallery2">
+            <a target="_blank" href="IMG/PHO00011.JPG">
+                <img src="IMG/PHO00011.JPG" alt="Rusty leaves" width="300vw">
+            </a>
+            <div class="description">Rusty leaves</div>
+        </div>
+
+        <div class="gallery2">
+            <a target="_blank" href="IMG/PHO00007.JPG">
+                <img src="IMG/PHO00007.JPG" alt="Pine needles" width="300vw">
+            </a>
+            <div class="description">Pine needles</div>
+        </div>
+
+        <div class="gallery2">
+            <a target="_blank" href="IMG/PHO00001.JPG">
+                <img src="IMG/PHO00001.JPG" alt="Park" width="300vw">
+            </a>
+            <div class="description">Park</div>
+        </div>
+
     </body>
 </html>
