--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <meta http-equiv="X-UA-Xompatible" content="ie-edge">
         <title>Photo Blog</title>
         <link rel="stylesheet" href="styles.css">
+        <link rel="icon" href="IMG/48 mexapixel camera icon.png">
+    
     </head>
         <header>
             <div class="logo">
@@ -13,6 +15,14 @@
             </div>
         </header>
     <body>
+       
+            <div class="cameras">
+                <img src="IMG/Thermal cam.png" alt="Thermal print camera">
+                <img src="IMG/48 mexapixel camera icon.png" alt="48 megapixel camera">
+            </div>
+
+    <div class="container">
+
         <div class="gallery">
             <a target="_blank" href="IMG/PICT0050.jpg">
                 <img src="IMG/PICT0050.jpg" alt="The sky" width="300vw">
@@ -337,5 +347,6 @@
             <div class="description">Park</div>
         </div>
 
+    </div>
     </body>
 </html>
