4 more pictures added

--- a/index.html
+++ b/index.html
@@ -347,6 +347,34 @@
             <div class="description">Park</div>
         </div>
 
+        <div class="gallery">
+            <a target="_blank" href="IMG/PICT0681.jpg">
+                <img src="IMG/PICT0681.jpg" alt="Sequins" width="300vw">
+            </a>
+            <div class="description">Sequins</div>
+        </div>
+
+        <div class="gallery">
+            <a target="_blank" href="IMG/PICT0669.jpg">
+                <img src="IMG/PICT0669.jpg" alt="Tomato and cucumeber sandwiches" width="300vw">
+            </a>
+            <div class="description">Tomato and cucumeber sandwiches</div>
+        </div>
+
+        <div class="gallery">
+            <a target="_blank" href="IMG/PICT0665.jpg">
+                <img src="IMG/PICT0665.jpg" alt="The face" width="300vw">
+            </a>
+            <div class="description">The face</div>
+        </div>
+
+        <div class="gallery">
+            <a target="_blank" href="IMG/PICT0617.jpg">
+                <img src="IMG/PICT0617.jpg" alt="Eye scritch" width="300vw">
+            </a>
+            <div class="description">Eye scritch. Real date is 2025/03/18</div>
+        </div>
+
     </div>
     </body>
 </html>
