new sunny walk photos

--- a/index.html
+++ b/index.html
@@ -375,6 +375,83 @@
             <div class="description">Eye scritch. Real date is 2025/03/18</div>
         </div>
 
+        <div class="gallery">
+            <a target="_blank" href="IMG/PICT0829.jpg">
+                <img src="IMG/PICT0829.jpg" alt="Sunset behind trees" width="300vw">
+            </a>
+            <div class="description">Sunset behind trees</div>
+        </div>
+
+        <div class="gallery">
+            <a target="_blank" href="IMG/PICT0875.jpg">
+                <img src="IMG/PICT0875.jpg" alt="Spring branches" width="300vw">
+            </a>
+            <div class="description">Spring branches</div>
+        </div>
+
+        <div class="gallery">
+            <a target="_blank" href="IMG/PICT0878.jpg">
+                <img src="IMG/PICT0878.jpg" alt="Sunny street" width="300vw">
+            </a>
+            <div class="description">Sunny street</div>
+        </div>
+
+        <div class="gallery">
+            <a target="_blank" href="IMG/PICT0888.jpg">
+                <img src="IMG/PICT0888.jpg" alt="Two shadows" width="300vw">
+            </a>
+            <div class="description">Two shadows</div>
+        </div>
+
+        <div class="gallery">
+            <a target="_blank" href="IMG/PICT0897.jpg">
+                <img src="IMG/PICT0897.jpg" alt="Railings" width="300vw">
+            </a>
+            <div class="description">Railings</div>
+        </div>
+
+        <div class="gallery">
+            <a target="_blank" href="IMG/PICT0899.jpg">
+                <img src="IMG/PICT0899.jpg" alt="Small park" width="300vw">
+            </a>
+            <div class="description">Small park</div>
+        </div>
+
+        <div class="gallery">
+            <a target="_blank" href="IMG/PICT0902.jpg">
+                <img src="IMG/PICT0902.jpg" alt="Two firs" width="300vw">
+            </a>
+            <div class="description">Two firs</div>
+        </div>
+
+        <div class="gallery">
+            <a target="_blank" href="IMG/PICT0909.jpg">
+                <img src="IMG/PICT0909.jpg" alt="Wooden bench" width="300vw">
+            </a>
+            <div class="description">Wooden bench</div>
+        </div>
+
+        <div class="gallery">
+            <a target="_blank" href="IMG/PICT0918.jpg">
+                <img src="IMG/PICT0918.jpg" alt="Hawthorn shadows" width="300vw">
+            </a>
+            <div class="description">Hawthorn shadows</div>
+        </div>
+
+        <div class="gallery">
+            <a target="_blank" href="IMG/PICT0931.jpg">
+                <img src="IMG/PICT0931.jpg" alt="Playground trees" width="300vw">
+            </a>
+            <div class="description">Playground trees</div>
+        </div>
+
+        <div class="gallery">
+            <a target="_blank" href="IMG/PICT0934.jpg">
+                <img src="IMG/PICT0934.jpg" alt="Bakery lamp" width="300vw">
+            </a>
+            <div class="description">Bakery lamp</div>
+        </div>
+
     </div>
     </body>
 </html>
