New pictures of kitty and sky and crow

--- a/index.html
+++ b/index.html
@@ -452,6 +452,41 @@
             <div class="description">Bakery lamp</div>
         </div>
 
+        <div class="gallery">
+            <a target="_blank" href="IMG/PICT0945.jpg">
+                <img src="IMG/PICT0945.jpg" alt="Sunset behind buildings" width="300vw">
+            </a>
+            <div class="description">Sunset behind buildings</div>
+        </div>
+
+        <div class="gallery">
+            <a target="_blank" href="IMG/PICT0948.jpg">
+                <img src="IMG/PICT0948.jpg" alt="Setting sun on houses" width="300vw">
+            </a>
+            <div class="description">Setting sun on houses</div>
+        </div>
+
+        <div class="gallery">
+            <a target="_blank" href="IMG/PICT0955.jpg">
+                <img src="IMG/PICT0955.jpg" alt="Big stretch" width="300vw">
+            </a>
+            <div class="description">Big stretch</div>
+        </div>
+
+        <div class="gallery">
+            <a target="_blank" href="IMG/PICT0966.jpg">
+                <img src="IMG/PICT0966.jpg" alt="Crow through a spy-glass" width="300vw">
+            </a>
+            <div class="description">Crow through a spy-glass</div>
+        </div>
+
+        <div class="gallery">
+            <a target="_blank" href="IMG/PICT0989.jpg">
+                <img src="IMG/PICT0989.jpg" alt="Colorful sky" width="300vw">
+            </a>
+            <div class="description">Colorful sky</div>
+        </div>
+
     </div>
     </body>
 </html>
