Many sky pictures

--- a/index.html
+++ b/index.html
@@ -487,6 +487,63 @@
             <div class="description">Colorful sky</div>
         </div>
 
+        <div class="gallery">
+            <a target="_blank" href="IMG/PICT1086.jpg">
+                <img src="IMG/PICT1086.jpg" alt="Clouds through summer branches" width="300vw">
+            </a>
+            <div class="description">Clouds through summer branches</div>
+        </div>
+
+        <div class="gallery">
+            <a target="_blank" href="IMG/PICT1105.jpg">
+                <img src="IMG/PICT1105.jpg" alt="Clouds above roof" width="300vw">
+            </a>
+            <div class="description">Clouds above roof</div>
+        </div>
+
+        <div class="gallery">
+            <a target="_blank" href="IMG/PICT1107.jpg">
+                <img src="IMG/PICT1107.jpg" alt="Fuzzy clouds" width="300vw">
+            </a>
+            <div class="description">Fuzzy clouds</div>
+        </div>
+
+        
+        <div class="gallery">
+            <a target="_blank" href="IMG/PICT1108.jpg">
+                <img src="IMG/PICT1108.jpg" alt="Hazy houses" width="300vw">
+            </a>
+            <div class="description">Hazy houses</div>
+        </div>
+
+        <div class="gallery">
+            <a target="_blank" href="IMG/PICT1109.jpg">
+                <img src="IMG/PICT1109.jpg" alt="Dark branches with clouds" width="300vw">
+            </a>
+            <div class="description">Dark branches with clouds</div>
+        </div>
+
+        <div class="gallery">
+            <a target="_blank" href="IMG/PICT1116.jpg">
+                <img src="IMG/PICT1116.jpg" alt="Sun rays in clouds" width="300vw">
+            </a>
+            <div class="description">Sun rays in clouds</div>
+        </div>
+
+        <div class="gallery">
+            <a target="_blank" href="IMG/PICT1117.jpg">
+                <img src="IMG/PICT1117.jpg" alt="Sun rays in clouds" width="300vw">
+            </a>
+            <div class="description">Sun rays in clouds</div>
+        </div>
+
+        <div class="gallery">
+            <a target="_blank" href="IMG/PICT1119.jpg">
+                <img src="IMG/PICT1119.jpg" alt="Bright sky with clouds" width="300vw">
+            </a>
+            <div class="description">Bright sky with clouds</div>
+        </div>
+
     </div>
     </body>
 </html>
