More clouds damn it

--- a/index.html
+++ b/index.html
@@ -495,6 +495,13 @@
         </div>
 
         <div class="gallery">
+            <a target="_blank" href="IMG/PICT1087.jpg">
+                <img src="IMG/PICT1087.jpg" alt="Summer branches with clouds" width="300vw">
+            </a>
+            <div class="description">Summer branches with clouds</div>
+        </div>
+
+        <div class="gallery">
             <a target="_blank" href="IMG/PICT1105.jpg">
                 <img src="IMG/PICT1105.jpg" alt="Clouds above roof" width="300vw">
             </a>
