pictures from A WALK in the beaver zone

--- a/index.html
+++ b/index.html
@@ -551,6 +551,111 @@
             <div class="description">Bright sky with clouds</div>
         </div>
 
+        <div class="gallery">
+            <a target="_blank" href="IMG/PICT1214.jpg">
+                <img src="IMG/PICT1214.jpg" alt="Down the steps" width="300vw">
+            </a>
+            <div class="description">Down the steps</div>
+        </div>
+
+        <div class="gallery">
+            <a target="_blank" href="IMG/PICT1217.jpg">
+                <img src="IMG/PICT1217.jpg" alt="Puddle and a bench" width="300vw">
+            </a>
+            <div class="description">Puddle and a bench</div>
+        </div>
+
+        <div class="gallery">
+            <a target="_blank" href="IMG/PICT1220.jpg">
+                <img src="IMG/PICT1220.jpg" alt="Swampy" width="300vw">
+            </a>
+            <div class="description">Swampy</div>
+        </div>
+
+        <div class="gallery">
+            <a target="_blank" href="IMG/PICT1221.jpg">
+                <img src="IMG/PICT1221.jpg" alt="Hazy river" width="300vw">
+            </a>
+            <div class="description">Hazy river</div>
+        </div>
+        
+        <div class="gallery">
+            <a target="_blank" href="IMG/PICT1236.jpg">
+                <img src="IMG/PICT1236.jpg" alt="Wet shoe soles" width="300vw">
+            </a>
+            <div class="description">Wet shoe soles</div>
+        </div>
+
+        <div class="gallery">
+            <a target="_blank" href="IMG/PICT1257.jpg">
+                <img src="IMG/PICT1257.jpg" alt="Ducks" width="300vw">
+            </a>
+            <div class="description">Ducks</div>
+        </div>
+
+        <div class="gallery">
+            <a target="_blank" href="IMG/PICT1265.jpg">
+                <img src="IMG/PICT1265.jpg" alt="Running water" width="300vw">
+            </a>
+            <div class="description">Running water</div>
+        </div>
+
+        <div class="gallery">
+            <a target="_blank" href="IMG/PICT1268.jpg">
+                <img src="IMG/PICT1268.jpg" alt="Gray mushrooms" width="300vw">
+            </a>
+            <div class="description">Gray mushrooms</div>
+        </div>
+
+        <div class="gallery">
+            <a target="_blank" href="IMG/PICT1273.jpg">
+                <img src="IMG/PICT1273.jpg" alt="Dog tracks" width="300vw">
+            </a>
+            <div class="description">Dog tracks</div>
+        </div>
+
+        <div class="gallery">
+            <a target="_blank" href="IMG/PICT1283.jpg">
+                <img src="IMG/PICT1283.jpg" alt="Having a walk" width="300vw">
+            </a>
+            <div class="description">Having a walk</div>
+        </div>
+
+        <div class="gallery">
+            <a target="_blank" href="IMG/PICT1302.jpg">
+                <img src="IMG/PICT1302.jpg" alt="Gloomy sky" width="300vw">
+            </a>
+            <div class="description">Gloomy sky</div>
+        </div>
+
+        <div class="gallery">
+            <a target="_blank" href="IMG/PICT1310.jpg">
+                <img src="IMG/PICT1310.jpg" alt="Stairs with shadows" width="300vw">
+            </a>
+            <div class="description">Stairs with shadowsy</div>
+        </div>
+
+        <div class="gallery">
+            <a target="_blank" href="IMG/PICT1315.jpg">
+                <img src="IMG/PICT1315.jpg" alt="Fancy buildings behind trees" width="300vw">
+            </a>
+            <div class="description">Fancy buildings behind trees</div>
+        </div>
+
+        <div class="gallery">
+            <a target="_blank" href="IMG/PICT1317.jpg">
+                <img src="IMG/PICT1317.jpg" alt="Plants growing in the swamp" width="300vw">
+            </a>
+            <div class="description">Plants growing in the swamp</div>
+        </div>
+
+        <div class="gallery">
+            <a target="_blank" href="IMG/PICT1320.jpg">
+                <img src="IMG/PICT1320.jpg" alt="Tussilago flowers" width="300vw">
+            </a>
+            <div class="description">Tussilago flowers</div>
+        </div>
+
     </div>
     </body>
 </html>
