Pictures from waiting for moms car near a mall

--- a/index.html
+++ b/index.html
@@ -656,6 +656,34 @@
             <div class="description">Tussilago flowers</div>
         </div>
 
+        <div class="gallery">
+            <a target="_blank" href="IMG/PICT1352.jpg">
+                <img src="IMG/PICT1352.jpg" alt="Building near a mall" width="300vw">
+            </a>
+            <div class="description">Building near a mall</div>
+        </div>
+
+        <div class="gallery">
+            <a target="_blank" href="IMG/PICT1356.jpg">
+                <img src="IMG/PICT1356.jpg" alt="Nowhere to park" width="300vw">
+            </a>
+            <div class="description">Nowhere to park</div>
+        </div>
+
+        <div class="gallery">
+            <a target="_blank" href="IMG/PICT1372.jpg">
+                <img src="IMG/PICT1372.jpg" alt="Green walls" width="300vw">
+            </a>
+            <div class="description">Green walls</div>
+        </div>
+
+        <div class="gallery">
+        <a target="_blank" href="IMG/PICT1374.jpg">
+            <img src="IMG/PICT1374.jpg" alt="Crocus flowers in mom's garden" width="300vw">
+        </a>
+        <div class="description">Crocus flowers in mom's garden</div>
+        </div>
+
     </div>
     </body>
 </html>
