New camera new pictures

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <div class="cameras">
                 <img src="IMG/Thermal cam.png" alt="Thermal print camera">
                 <img src="IMG/48 mexapixel camera icon.png" alt="48 megapixel camera">
+                <img src="IMG/56 mexapixel camera icon.png" alt="56 megapixel camera">
             </div>
 
     <div class="container">
@@ -683,6 +684,160 @@
         </a>
         <div class="description">Crocus flowers in mom's garden</div>
         </div>
+
+        <div class="gallery">
+            <a target="_blank" href="IMG/PICT1379.jpg">
+                <img src="IMG/PICT1379.jpg" alt="Early spring branches" width="300vw">
+            </a>
+            <div class="description">Early spring branches</div>
+            </div>
+
+        <div class="gallery">
+                <a target="_blank" href="IMG/PICT1408.jpg">
+                    <img src="IMG/PICT1408.jpg" alt="April snow" width="300vw">
+                </a>
+                <div class="description">April snow</div>
+                </div>
+
+        <div class="gallery3">
+        <a target="_blank" href="IMG/PICT0102.jpg">
+        <img src="IMG/PICT0102.jpg" alt="Snow in the streets" width="300vw">
+        </a>
+        <div class="description">Snow in the streets</div>
+        </div>
+
+        <div class="gallery3">
+            <a target="_blank" href="IMG/PICT0152.jpg">
+            <img src="IMG/PICT0152.jpg" alt="Red building" width="300vw">
+            </a>
+            <div class="description">Red building</div>
+            </div>
+
+    <div class="gallery3">
+    <a target="_blank" href="IMG/PICT0264.jpg">
+    <img src="IMG/PICT0264.jpg" alt="Blooming geranium" width="300vw">
+    </a>
+    <div class="description">Blooming geranium</div>
+    </div>
+
+    <div class="gallery">
+        <a target="_blank" href="IMG/PICT1568.jpg">
+        <img src="IMG/PICT1568.jpg" alt="Snowy tree mushrooms" width="300vw">
+        </a>
+        <div class="description">Snowy tree mushrooms</div>
+        </div>
+
+<div class="gallery">
+<a target="_blank" href="IMG/PICT1548.jpg">
+<img src="IMG/PICT1548.jpg" alt="A walk in the snow" width="300vw">
+</a>
+<div class="description">A walk in the snow</div>
+</div>   
+
+<div class="gallery3">
+    <a target="_blank" href="IMG/PICT0404.jpg">
+    <img src="IMG/PICT0404.jpg" alt="Fuzzy" width="300vw">
+    </a>
+    <div class="description">Fuzzy</div>
+    </div>  
+
+<div class="gallery3">
+    <a target="_blank" href="IMG/PICT0417.jpg">
+    <img src="IMG/PICT0417.jpg" alt="Hazy pink river bank" width="300vw">
+    </a>
+    <div class="description">Hazy pink river bank</div>
+    </div> 
+
+<div class="gallery3">
+    <a target="_blank" href="IMG/PICT0437.jpg">
+    <img src="IMG/PICT0437.jpg" alt="Flying off" width="300vw">
+    </a>
+    <div class="description">Flying off</div>
+    </div> 
+
+<div class="gallery3">
+    <a target="_blank" href="IMG/PICT0462.jpg">
+    <img src="IMG/PICT0462.jpg" alt="Moss" width="300vw">
+    </a>
+    <div class="description">Moss</div>
+    </div> 
+
+<div class="gallery3">
+    <a target="_blank" href="IMG/PICT0517.jpg">
+    <img src="IMG/PICT0517.jpg" alt="Young fir trees" width="300vw">
+    </a>
+    <div class="description">Young fir trees</div>
+    </div> 
+
+    <div class="gallery3">
+    <a target="_blank" href="IMG/PICT0551.jpg">
+    <img src="IMG/PICT0551.jpg" alt="Duck" width="300vw">
+    </a>
+    <div class="description">Duck</div>
+    </div> 
+
+     <div class="gallery3">
+    <a target="_blank" href="IMG/PICT0584.jpg">
+    <img src="IMG/PICT0584.jpg" alt="Dramatic houses" width="300vw">
+    </a>
+    <div class="description">Dramatic houses</div>
+    </div> 
+
+    <div class="gallery">
+    <a target="_blank" href="IMG/PICT1611.jpg">
+    <img src="IMG/PICT1611.jpg" alt="Tired kitty" width="300vw">
+    </a>
+    <div class="description">Tired kitty</div>
+    </div> 
+
+   <div class="gallery3">
+    <a target="_blank" href="IMG/PICT0621.jpg">
+    <img src="IMG/PICT0621.jpg" alt="Crow up high" width="300vw">
+    </a>
+    <div class="description">Crow up high</div>
+    </div> 
+
+    <div class="gallery3">
+        <a target="_blank" href="IMG/PICT0648.jpg">
+        <img src="IMG/PICT0648.jpg" alt="Pretty skies" width="300vw">
+        </a>
+        <div class="description">Pretty skies</div>
+        </div> 
+
+        <div class="gallery3">
+            <a target="_blank" href="IMG/PTDC0082.jpg">
+            <img src="IMG/PTDC0082.jpg" alt="Kitty in the hallway" width="300vw">
+            </a>
+            <div class="description">Kitty in the hallway. Alt cam.</div>
+            </div> 
+
+        <div class="gallery3">
+            <a target="_blank" href="IMG/PTDC0114.jpg">
+            <img src="IMG/PTDC0114.jpg" alt="Squishy taba paw" width="300vw">
+            </a>
+            <div class="description">Squishy taba paw. Alt cam.</div>
+            </div> 
+
+ <div class="gallery3">
+        <a target="_blank" href="IMG/PICT0698.jpg">
+        <img src="IMG/PICT0698.jpg" alt="Sunny leaves" width="300vw">
+        </a>
+        <div class="description">Sunny leaves</div>
+        </div> 
+
+ <div class="gallery3">
+        <a target="_blank" href="IMG/PICT0701.jpg">
+        <img src="IMG/PICT0701.jpg" alt="Sunset in the yard" width="300vw">
+        </a>
+        <div class="description">Sunset in the yards</div>
+        </div> 
+
+ <div class="gallery3">
+        <a target="_blank" href="IMG/PICT0074.jpg">
+        <img src="IMG/PICT0074.jpg" alt="Yaaawwn" width="300vw">
+        </a>
+        <div class="description">Yaaawwn. Real date is 07/04/2025</div>
+        </div> 
 
     </div>
     </body>
