--- a/index.html
+++ b/index.html
@@ -538,306 +538,26 @@
             <div class="description">Sun rays in clouds</div>
         </div>
 
-        <div class="gallery">
-            <a target="_blank" href="IMG/PICT1117.jpg">
-                <img src="IMG/PICT1117.jpg" alt="Sun rays in clouds" width="300vw">
-            </a>
-            <div class="description">Sun rays in clouds</div>
-        </div>
-
-        <div class="gallery">
-            <a target="_blank" href="IMG/PICT1119.jpg">
-                <img src="IMG/PICT1119.jpg" alt="Bright sky with clouds" width="300vw">
-            </a>
-            <div class="description">Bright sky with clouds</div>
-        </div>
-
-        <div class="gallery">
-            <a target="_blank" href="IMG/PICT1214.jpg">
-                <img src="IMG/PICT1214.jpg" alt="Down the steps" width="300vw">
-            </a>
-            <div class="description">Down the steps</div>
-        </div>
-
-        <div class="gallery">
-            <a target="_blank" href="IMG/PICT1217.jpg">
-                <img src="IMG/PICT1217.jpg" alt="Puddle and a bench" width="300vw">
-            </a>
-            <div class="description">Puddle and a bench</div>
-        </div>
-
-        <div class="gallery">
-            <a target="_blank" href="IMG/PICT1220.jpg">
-                <img src="IMG/PICT1220.jpg" alt="Swampy" width="300vw">
-            </a>
-            <div class="description">Swampy</div>
-        </div>
-
-        <div class="gallery">
-            <a target="_blank" href="IMG/PICT1221.jpg">
-                <img src="IMG/PICT1221.jpg" alt="Hazy river" width="300vw">
-            </a>
-            <div class="description">Hazy river</div>
-        </div>
-        
-        <div class="gallery">
-            <a target="_blank" href="IMG/PICT1236.jpg">
-                <img src="IMG/PICT1236.jpg" alt="Wet shoe soles" width="300vw">
-            </a>
-            <div class="description">Wet shoe soles</div>
-        </div>
-
-        <div class="gallery">
-            <a target="_blank" href="IMG/PICT1257.jpg">
-                <img src="IMG/PICT1257.jpg" alt="Ducks" width="300vw">
-            </a>
-            <div class="description">Ducks</div>
-        </div>
-
-        <div class="gallery">
-            <a target="_blank" href="IMG/PICT1265.jpg">
-                <img src="IMG/PICT1265.jpg" alt="Running water" width="300vw">
-            </a>
-            <div class="description">Running water</div>
-        </div>
-
-        <div class="gallery">
-            <a target="_blank" href="IMG/PICT1268.jpg">
-                <img src="IMG/PICT1268.jpg" alt="Gray mushrooms" width="300vw">
-            </a>
-            <div class="description">Gray mushrooms</div>
-        </div>
-
-        <div class="gallery">
-            <a target="_blank" href="IMG/PICT1273.jpg">
-                <img src="IMG/PICT1273.jpg" alt="Dog tracks" width="300vw">
-            </a>
-            <div class="description">Dog tracks</div>
-        </div>
-
-        <div class="gallery">
-            <a target="_blank" href="IMG/PICT1283.jpg">
-                <img src="IMG/PICT1283.jpg" alt="Having a walk" width="300vw">
-            </a>
-            <div class="description">Having a walk</div>
-        </div>
-
-        <div class="gallery">
-            <a target="_blank" href="IMG/PICT1302.jpg">
-                <img src="IMG/PICT1302.jpg" alt="Gloomy sky" width="300vw">
-            </a>
-            <div class="description">Gloomy sky</div>
-        </div>
-
-        <div class="gallery">
-            <a target="_blank" href="IMG/PICT1310.jpg">
-                <img src="IMG/PICT1310.jpg" alt="Stairs with shadows" width="300vw">
-            </a>
-            <div class="description">Stairs with shadowsy</div>
-        </div>
-
-        <div class="gallery">
-            <a target="_blank" href="IMG/PICT1315.jpg">
-                <img src="IMG/PICT1315.jpg" alt="Fancy buildings behind trees" width="300vw">
-            </a>
-            <div class="description">Fancy buildings behind trees</div>
-        </div>
-
-        <div class="gallery">
-            <a target="_blank" href="IMG/PICT1317.jpg">
-                <img src="IMG/PICT1317.jpg" alt="Plants growing in the swamp" width="300vw">
-            </a>
-            <div class="description">Plants growing in the swamp</div>
-        </div>
-
-        <div class="gallery">
-            <a target="_blank" href="IMG/PICT1320.jpg">
-                <img src="IMG/PICT1320.jpg" alt="Tussilago flowers" width="300vw">
-            </a>
-            <div class="description">Tussilago flowers</div>
-        </div>
-
-        <div class="gallery">
-            <a target="_blank" href="IMG/PICT1352.jpg">
-                <img src="IMG/PICT1352.jpg" alt="Building near a mall" width="300vw">
-            </a>
-            <div class="description">Building near a mall</div>
-        </div>
-
-        <div class="gallery">
-            <a target="_blank" href="IMG/PICT1356.jpg">
-                <img src="IMG/PICT1356.jpg" alt="Nowhere to park" width="300vw">
-            </a>
-            <div class="description">Nowhere to park</div>
-        </div>
-
-        <div class="gallery">
-            <a target="_blank" href="IMG/PICT1372.jpg">
-                <img src="IMG/PICT1372.jpg" alt="Green walls" width="300vw">
-            </a>
-            <div class="description">Green walls</div>
-        </div>
-
-        <div class="gallery">
-        <a target="_blank" href="IMG/PICT1374.jpg">
-            <img src="IMG/PICT1374.jpg" alt="Crocus flowers in mom's garden" width="300vw">
-        </a>
-        <div class="description">Crocus flowers in mom's garden</div>
-        </div>
-
-        <div class="gallery">
-            <a target="_blank" href="IMG/PICT1379.jpg">
-                <img src="IMG/PICT1379.jpg" alt="Early spring branches" width="300vw">
-            </a>
-            <div class="description">Early spring branches</div>
+<br>
+        <button>
+            <div class="page">
+                <a href="index.html">1</a> 
             </div>
+        </button>
 
-        <div class="gallery">
-                <a target="_blank" href="IMG/PICT1408.jpg">
-                    <img src="IMG/PICT1408.jpg" alt="April snow" width="300vw">
-                </a>
-                <div class="description">April snow</div>
-                </div>
-
-        <div class="gallery3">
-        <a target="_blank" href="IMG/PICT0102.jpg">
-        <img src="IMG/PICT0102.jpg" alt="Snow in the streets" width="300vw">
-        </a>
-        <div class="description">Snow in the streets</div>
-        </div>
-
-        <div class="gallery3">
-            <a target="_blank" href="IMG/PICT0152.jpg">
-            <img src="IMG/PICT0152.jpg" alt="Red building" width="300vw">
-            </a>
-            <div class="description">Red building</div>
+          <button>
+            <div class="page">
+                <a href="photos2.html">2</a> 
             </div>
+        </button>
 
-    <div class="gallery3">
-    <a target="_blank" href="IMG/PICT0264.jpg">
-    <img src="IMG/PICT0264.jpg" alt="Blooming geranium" width="300vw">
-    </a>
-    <div class="description">Blooming geranium</div>
-    </div>
+          <button>
+            <div class="page">
+                <a href="photos3.html">3</a> 
+            </div>
+        </button>
 
-    <div class="gallery">
-        <a target="_blank" href="IMG/PICT1568.jpg">
-        <img src="IMG/PICT1568.jpg" alt="Snowy tree mushrooms" width="300vw">
-        </a>
-        <div class="description">Snowy tree mushrooms</div>
-        </div>
-
-<div class="gallery">
-<a target="_blank" href="IMG/PICT1548.jpg">
-<img src="IMG/PICT1548.jpg" alt="A walk in the snow" width="300vw">
-</a>
-<div class="description">A walk in the snow</div>
-</div>   
-
-<div class="gallery3">
-    <a target="_blank" href="IMG/PICT0404.jpg">
-    <img src="IMG/PICT0404.jpg" alt="Fuzzy" width="300vw">
-    </a>
-    <div class="description">Fuzzy</div>
-    </div>  
-
-<div class="gallery3">
-    <a target="_blank" href="IMG/PICT0417.jpg">
-    <img src="IMG/PICT0417.jpg" alt="Hazy pink river bank" width="300vw">
-    </a>
-    <div class="description">Hazy pink river bank</div>
-    </div> 
-
-<div class="gallery3">
-    <a target="_blank" href="IMG/PICT0437.jpg">
-    <img src="IMG/PICT0437.jpg" alt="Flying off" width="300vw">
-    </a>
-    <div class="description">Flying off</div>
-    </div> 
-
-<div class="gallery3">
-    <a target="_blank" href="IMG/PICT0462.jpg">
-    <img src="IMG/PICT0462.jpg" alt="Moss" width="300vw">
-    </a>
-    <div class="description">Moss</div>
-    </div> 
-
-<div class="gallery3">
-    <a target="_blank" href="IMG/PICT0517.jpg">
-    <img src="IMG/PICT0517.jpg" alt="Young fir trees" width="300vw">
-    </a>
-    <div class="description">Young fir trees</div>
-    </div> 
-
-    <div class="gallery3">
-    <a target="_blank" href="IMG/PICT0551.jpg">
-    <img src="IMG/PICT0551.jpg" alt="Duck" width="300vw">
-    </a>
-    <div class="description">Duck</div>
-    </div> 
-
-     <div class="gallery3">
-    <a target="_blank" href="IMG/PICT0584.jpg">
-    <img src="IMG/PICT0584.jpg" alt="Dramatic houses" width="300vw">
-    </a>
-    <div class="description">Dramatic houses</div>
-    </div> 
-
-    <div class="gallery">
-    <a target="_blank" href="IMG/PICT1611.jpg">
-    <img src="IMG/PICT1611.jpg" alt="Tired kitty" width="300vw">
-    </a>
-    <div class="description">Tired kitty</div>
-    </div> 
-
-   <div class="gallery3">
-    <a target="_blank" href="IMG/PICT0621.jpg">
-    <img src="IMG/PICT0621.jpg" alt="Crow up high" width="300vw">
-    </a>
-    <div class="description">Crow up high</div>
-    </div> 
-
-    <div class="gallery3">
-        <a target="_blank" href="IMG/PICT0648.jpg">
-        <img src="IMG/PICT0648.jpg" alt="Pretty skies" width="300vw">
-        </a>
-        <div class="description">Pretty skies</div>
-        </div> 
-
-        <div class="gallery3">
-            <a target="_blank" href="IMG/PTDC0082.jpg">
-            <img src="IMG/PTDC0082.jpg" alt="Kitty in the hallway" width="300vw">
-            </a>
-            <div class="description">Kitty in the hallway. Alt cam.</div>
-            </div> 
-
-        <div class="gallery3">
-            <a target="_blank" href="IMG/PTDC0114.jpg">
-            <img src="IMG/PTDC0114.jpg" alt="Squishy taba paw" width="300vw">
-            </a>
-            <div class="description">Squishy taba paw. Alt cam.</div>
-            </div> 
-
- <div class="gallery3">
-        <a target="_blank" href="IMG/PICT0698.jpg">
-        <img src="IMG/PICT0698.jpg" alt="Sunny leaves" width="300vw">
-        </a>
-        <div class="description">Sunny leaves</div>
-        </div> 
-
- <div class="gallery3">
-        <a target="_blank" href="IMG/PICT0701.jpg">
-        <img src="IMG/PICT0701.jpg" alt="Sunset in the yard" width="300vw">
-        </a>
-        <div class="description">Sunset in the yards</div>
-        </div> 
-
- <div class="gallery3">
-        <a target="_blank" href="IMG/PICT0074.jpg">
-        <img src="IMG/PICT0074.jpg" alt="Yaaawwn" width="300vw">
-        </a>
-        <div class="description">Yaaawwn. Real date is 07/04/2025</div>
-        </div> 
+       
 
     </div>
     </body>
