color coded buttons

--- a/index.html
+++ b/index.html
@@ -539,9 +539,9 @@
         </div>
 
 <br>
-        <button>
+        <button style="background-color: rgb(228, 177, 141);">
             <div class="page">
-                <a href="index.html">1</a> 
+                <a href="index.html" >1</a> 
             </div>
         </button>
 
