--- a/photos2.html
+++ b/photos2.html
@@ -533,7 +533,7 @@
             </div>
         </button>
 
-          <button>
+          <button style="background-color: rgb(228, 177, 141);">
             <div class="page">
                 <a href="photos2.html">2</a> 
             </div>
