--- a/photos3.html
+++ b/photos3.html
@@ -46,7 +46,7 @@
             </div>
         </button>
 
-          <button>
+          <button style="background-color: rgb(228, 177, 141);">
             <div class="page">
                 <a href="photos3.html">3</a> 
             </div>
